add client-side date validations to date field in procedures section in profile

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1008,11 +1008,11 @@
             </div>
             -->
             <br/>
-            <div class="form-group">
+            <div id="procDateGroup" class="form-group">
                 <label class="procedureDateLabel">Date:</label>
                 <div class="flex">
                     <div>
-                        <input class="form-control" id="procDay" name="procDay"  type="text" placeholder="DD" patterntype="text" maxlength="2" data-birthday="true" required="" pattern="(0[1-9]|[12][0-9]|3[01])">
+                        <input class="form-control" id="procDay" name="procDay"  type="text" placeholder="DD" patterntype="text" maxlength="2" data-birthday="true" required="" pattern="([1-9]|[12][0-9]|3[01])">
                     </div>
                     <div>
                         <select class="form-control" name="procMonth" id="procMonth" data-birthday="true" required="">
@@ -1037,7 +1037,7 @@
                 </div>
                 <div class="row">
                      <div class="col-md-5 col-xs-10">
-                        <div class="help-block with-errors"></div>
+                        <div id="procDateErrorContainer" class="help-block with-errors"></div>
                      </div>
                 </div>
             </div>
