--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -373,7 +373,8 @@ btn {
   font-weight: normal;
 }
 .profile-img {
-  float: right;
+  /*float: right;*/
+  display: inline-block;
   margin-top: -66px;
 }
 .profile-img img {
@@ -494,7 +495,7 @@ btn {
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
-  background-color: rgba(204, 206, 204, 0.2);
+  background-color: rgba(204, 206, 204, 0.25);
   padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -503,7 +504,8 @@ btn {
   overflow-x: hidden;
 }
 .profile-item-title {
-  color: #575F5C;
+  /*color: #575F5C;*/
+  color: #526960;
   margin-bottom: 18px;
 }
 .profile-name-label {
@@ -672,8 +674,9 @@ table.profile-audit-log TH,
   transition: all 300ms ease-in;
 }
 .profile-header {
-  width: 100%;
-  max-width: 100%;
+  /*width: 100%;
+  max-width: 100%;*/
+  display:inline-block;
 }
 .profile-section {
   margin-bottom: 1.5em;
@@ -1291,6 +1294,7 @@ div.input-group.date {
     margin: -1em 0 1.5em;
   }
   .profile-img {
+    display:inline-block;
     margin-top: -66px;
   }
   .profile-img img {
