--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -27,7 +27,7 @@
 @btnColor:        #79815D;
 @legendColor:    #595F57;
 @sectionColor:    rgba(173, 193, 197, 0.16);
-@sectionTitleColor: #575F5C;
+@sectionTitleColor: #526960;
 @sectionBorderColor: #E0E6E3;
 @rowBackgroundColor: #7d826e;
 
@@ -447,7 +447,8 @@ a.btn {
   }
 }
 .profile-img {
-  float: right;
+  /*float: right;*/
+  display: inline:block;
   margin-top: -66px;
   img {
     width: 60px;
@@ -573,7 +574,7 @@ a.btn {
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
-  background-color: rgba(204, 206, 204, 0.2);
+  background-color: rgba(204, 206, 204, 0.25);
   padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -798,8 +799,9 @@ t
 }
 
 .profile-header {
-  width: 100%%;
-  max-width: 100%;
+  /*width: 100%%;
+  max-width: 100%;*/
+  display: inline-block;
 }
 .profile-section {
   margin-bottom: 1.5em;
@@ -1469,7 +1471,8 @@ div.input-group.date {
     margin: -1em 0 1.5em;
   }
   .profile-img {
-  float: right;
+  /*float: right;*/
+  display: inline-block;
   margin-top: -66px;
   img {
     width: 60px;
