--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -26,7 +26,7 @@
 @btnColor:        #79815D;
 @legendColor:    #595F57;
 @sectionColor:    rgba(173, 193, 197, 0.16);
-@sectionTitleColor: #575F5C;
+@sectionTitleColor: #526960;
 @sectionBorderColor: #E0E6E3;
 @rowBackgroundColor: #7d826e;
 
@@ -425,7 +425,8 @@ btn {
   }
 }
 .profile-img {
-  float: right;
+  /*float: right;*/
+  display: inline-block;
   margin-top: -66px;
   img {
     width: 60px;
@@ -555,7 +556,7 @@ btn {
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
-  background-color: rgba(204, 206, 204, 0.2);
+  background-color: rgba(204, 206, 204, 0.25);
   padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -764,8 +765,9 @@ t
 }
 
 .profile-header {
-  width: 100%;
-  max-width: 100%;
+  /*width: 100%;
+  max-width: 100%;*/
+  display:inline-block;
 }
 .profile-section {
   margin-bottom: 1.5em;
@@ -1441,6 +1443,7 @@ div.input-group.date {
   }
   .profile-img {
     margin-top: -66px;
+    display: inline-block;
     img {
       width: 60px;
       border-radius: 45px;
