--- a/portal/templates/shortcut_alias.html
+++ b/portal/templates/shortcut_alias.html
@@ -1,39 +1,47 @@
 {% extends "layout.html" %}
 {% block main %}
 {% from "flask_user/_macros.html" import render_field %}
-    
+
     <style>
      #accessCodeWrapper {
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
+        min-height: 400px;
         overflow: hidden;
+        margin: auto;
      }
     .access-button {
-        opacity: 1; 
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px; 
-        border-color: rgb(221, 221, 221); 
-        background-color: rgb(52, 152, 219); 
-        background-image: none; 
-        color: rgb(255, 255, 255); 
-        font-weight: normal; 
-        padding: 6px 10px; 
-        border-width: 0px; 
-        border-radius: 3px; 
-        border-style: solid; 
-        background-size: auto; 
-        background-repeat: repeat; 
-        background-position: center center; 
-        font-size: 14px; 
-        font-style: normal; 
-        font-family: Arial; 
-        text-align: center; 
-        width: 120px; 
-        height: 30px; 
+        opacity: 1;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
+        border-color: rgb(221, 221, 221);
+        background-color: rgb(52, 152, 219);
+        background-image: none;
+        color: rgb(255, 255, 255);
+        font-weight: normal;
+        padding: 6px 10px;
+        border-width: 0px;
+        border-radius: 3px;
+        border-style: solid;
+        background-size: auto;
+        background-repeat: repeat;
+        background-position: center center;
+        font-size: 14px;
+        font-style: normal;
+        font-family: Arial;
+        text-align: center;
+        width: 120px;
+        height: 30px;
         /*transform: rotate(0deg) translate(87px, 302px) rotate(0deg);*/
     }
 
+    #accessCodeWrapper {
+        margin: 0 auto;
+        width: 500px;
+        max-width: 100%;
+        min-height: 400px;
+    }
+
     #accessCodeWrapper .main {
-        margin: 5% auto 1% auto;
         padding: 2em;
     }
     #shortcut_alias {
@@ -45,7 +53,9 @@
         opacity: 0.65;
     }
     #registerLink {
-        padding:6.5px 24px;
+        padding: 6.5px 30px;
+        position: relative;
+        top: -1.1px;
     }
 
     </style>
@@ -57,7 +67,7 @@
                 </div>
                 <br/>
                 <div class="row">
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-md-12 col-xs-12">
                     {{ render_field(form.shortcut_alias, label="Enter Access Code", tabindex=10) }}
                     <br/>
                      <button type="submit" class="access-button disabled" disabled id="nextLink">Next</button>
