modify session timeout interval to 15 minutes and modify warning text

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -152,7 +152,7 @@
          </h4>
       </div>
       <div class="modal-body">
-        Your session will expire in <span id="remaining-time"></span> seconds due to inactivity.
+        Your session will expire in approximately <span id="remaining-time"></span> seconds due to inactivity.
       </div>
       <div class="modal-footer">
         <button id="log-out" class="btn btn-default" type="button" data-dismiss="modal">Log Out</button>
