--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -114,6 +114,7 @@ transform(-1000px, 0);*/
   /*position: relative;
     top: 2px;*/
   margin-left: -4px;
+  display:inline-block;
 }
 #indexNavBar span.link {
   margin-left: 0.3em;
@@ -1055,6 +1056,10 @@ div.input-group.date {
   .tnth-form .form-group > label {
     font-size: 13px;
   }
+  .create-user-link {
+    font-size: 0.95em;
+  }
+  
   #backLink a {
     position: relative;
     top: -1px;
@@ -1075,6 +1080,9 @@ div.input-group.date {
   }
   #indexNavBar #backLink a {
     top: -0.1px;
+  }
+ #indexNavBar span.index-list {
+    display: inline-block;
   }
   #wellContainer .tnth-well {
     height: 60%;
