--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -144,6 +144,7 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     /*position: relative;
     top: 2px;*/
     margin-left: -4px;
+    display: inline-block;
   }
 
   span.link {
@@ -1182,6 +1183,10 @@ div.input-group.date {
     font-size: 13px;
   }
 
+  .create-user-link {
+    font-size: 0.95em;
+  }
+
   #backLink a {
   position: relative;
   top: -1px;
@@ -1202,6 +1207,9 @@ div.input-group.date {
     }
     #backLink a {
       top: -0.1px;
+    }
+    span.index-list {
+      display: inline-block;
     }
   }
 
