remove registration button from landing page via css, Eproms ONLY

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -30,6 +30,9 @@ body {
 #fullSizeBox a[href*="register"] {
   display: none;
 }
+#fullSizeBox a[href*="go"] {
+  display: none;
+}
 #fullSizeBox a[href*="google"] {
   display: none;
 }
