--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -55,6 +55,9 @@ body {
   a[href*="register"] {
     display: none;
   }
+  a[href*="go"] {
+    display: none;
+  }
   a[href*="google"] {
     display: none;
   }
