adding locale dropdown to profile

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -159,6 +159,10 @@ $(document).ready(function(){
         targetField: $("#phone")
      },
      {
+        attachID: "locale",
+        targetField: $("#locale")
+     },
+     {
         attachID: "genderGroup",
         targetField: $("input[name='sex']")
      },
