--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -5,7 +5,6 @@
         <div class="profile-img hidden-xs">
             <img src="{{ person and person.image_url }}" />
         </div>
-
     {% endif %}
 {%- endmacro %}
 
@@ -52,6 +51,14 @@
                 $("#month").val(bdArray[1]);
                 $("#date").val(bdArray[2]);
             };
+            {% if person %}
+                $("#year, #month, #date").on("change", function() {
+                    if ($("#year").val() != "" && $("#month").val() != "" && $("#date").val() != "") {
+                        $("#birthday").val($("#year").val() + "-" + $("#month").val() + "-" + $("#date").val());
+                    }
+                    //assembleContent.demo({{person.id}}, true);
+                });
+            {% endif %}
         });
      </script>
 {%- endmacro %}
