--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -68,7 +68,11 @@
 <div id="tnthNavWrapper">
     <div id="tnthNavMain">
         <div id="tnthNavMainContainer">
-            <div id="tnthLogo"><a href="{{PORTAL}}"><img class="tnth-topnav-wordmark" src="{{PORTAL}}{{ url_for('static', filename='img/logo_wordmark_topnav2.png') }}" /></a></div>
+            <div id="tnthLogo">
+                {% if enable_links %}<a href="{{PORTAL}}">{% endif %}
+                    <img class="tnth-topnav-wordmark" src="{{PORTAL}}{{ url_for('static', filename='img/logo_wordmark_topnav2.png') }}" />
+                {% if enable_links %}</a>{% endif %}
+            </div>
             <div id="tnthTopLinks">
                 <div class="tnth-btn-group">
                     {% if user %}
@@ -76,8 +80,11 @@
                         Welcome{% if user.display_name != "Anonymous" %}, {{ user.display_name }}{% endif %}
                         {% if config.DEBUG_TIMEOUTS %} ({{ expires_in }} seconds remaining) {% endif %}
                         <img src="{{movember_profile}}" width="50" height="50" />
+                        {% if enable_links %}
                         &nbsp;&nbsp; MENU <i class="fa fa-bars"></i>
+                        {% endif %}
                     </button>
+                    {% if enable_links %}
                     <ul class="tnth-dropdown-menu">
                         <li><a href="{{PORTAL}}">TrueNTH Home</a></li>
                         {% if user and not user.has_roles('write_only') %}
@@ -95,6 +102,7 @@
                         {% endif %}
                         <li><a href="{{PORTAL}}/logout">Log Out of TrueNTH</a></li>
                     </ul>
+                    {% endif %}
                     {% elif login_url %}
                     <button type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
                         Welcome
@@ -111,10 +119,18 @@
         <div class="tnth-container-fluid">
             <div class="tnth-navbar-header">
                 <div class="tnth-white tnth-navbar-toggle tnth-nav-btn {% if not user %}tnth-navbar-no-profile{% endif %}">MENU <img src="{{movember_profile}}" width="45" height="45" /></div>
-                <a id="tnthLogoXs" href="{{PORTAL}}" title="Return to TrueNTH home"><img src="{{PORTAL}}{{url_for('static',filename='img/logo_wordmark_topnav.png')}}" /></a>
+                {% if enable_links %}
+                    <a id="tnthLogoXs" href="{{PORTAL}}" title="Return to TrueNTH home">
+                {% endif %}
+                <img src="{{PORTAL}}{{url_for('static',filename='img/logo_wordmark_topnav.png')}}" />
+                {% if enable_links %}</a>{% endif %}
             </div>
+            {% if enable_links %}
             <div id="tnthNavbarXs">
                 <ul class="tnth-navbar-xs">
+                    {% if login_url %}
+                    <li><a href="{{ login_url }}">Log In to TrueNTH</a></li>
+                    {% endif %}
                     <li><a href="{{PORTAL}}">TrueNTH Home</a></li>
                     {% if user %}
                     <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
@@ -131,6 +147,7 @@
                     {% endif %}
                 </ul>
             </div>
+            {% endif %}
         </div>
     </div>
 </div>
