--- a/portal/templates/shortcut_alias.html
+++ b/portal/templates/shortcut_alias.html
@@ -65,7 +65,7 @@
         <form  action="/go" method="post">
             <section class="main">
                 <div>
-                    <h4>Do you have an access code?</h4>
+                    <h4>Do you have an Access Code?</h4>
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-xs-12">
@@ -75,8 +75,8 @@
                 </div>
                 <br/><br/>
                 <div>
-                    <h4>I do not have an access code</h4>
-                    <p>Continue registration without an access code</p>
+                    <h4>I do not have an Access Code</h4>
+                    <p>Continue registration without an Access Code</p>
                     <a href="/user/register" role="button" class="access-button" id="registerLink">Register</a>
                 </div>
             </section>
