--- a/portal/templates/shortcut_alias.html
+++ b/portal/templates/shortcut_alias.html
@@ -13,8 +13,10 @@
     .access-button {
         opacity: 1;
         box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-        border-color: rgb(221, 221, 221);
-        background-color: rgb(52, 152, 219);
+        /*border-color: rgb(221, 221, 221);
+        background-color: rgb(52, 152, 219);*/
+        border-color: #79815D;
+        background-color: #79815D;
         background-image: none;
         color: rgb(255, 255, 255);
         font-weight: normal;
@@ -32,6 +34,12 @@
         width: 140px;
         height: 32px;
         /*transform: rotate(0deg) translate(87px, 302px) rotate(0deg);*/
+    }
+
+    .access-button:hover {
+        color: #fff;
+        background-color: #2a4531;
+        border-color: #1c2f21;
     }
 
     #accessCodeWrapper {
