--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{PORTAL}}{{ url_for('static', filename='css/topnav.css') }}">
 <script src="{{PORTAL}}{{ url_for('static', filename='js/tnth.js') }}"></script>
 <script>
-    var sessionMonitor=function(a){"use strict";function h(a){var b=new Date,d=b-g;a?(i(),c.ping()):d>c.minPingInterval&&(g=b,i(),c.ping())}function i(){var a=c.sessionLifetime-c.timeBeforeWarning;window.clearTimeout(d),window.clearTimeout(e),d=window.setTimeout(c.onwarning,a),e=window.setTimeout(j,c.sessionLifetime)}function j(){$.when(c.onbeforetimeout()).always(c.ontimeout)}var d,e,b={sessionLifetime:36e5,timeBeforeWarning:6e5,minPingInterval:6e4,activityEvents:"mouseup",pingUrl:"/api/ping",logoutUrl:"/logout",timeoutUrl:"/logout?timeout=1",ping:function(){$.ajax({type:"POST",url:c.pingUrl,crossDomain:!0})},logout:function(){window.location.href=c.logoutUrl},onwarning:function(){var a=Math.round(c.timeBeforeWarning/60/1e3),b=$('<div id="jqsm-warning">Your session will expire in '+a+' minutes. <button id="jqsm-stay-logged-in">Stay Logged In</button><button id="jqsm-log-out">Log Out</button></div>');$("body").children("div#jqsm-warning").length||$("body").prepend(b),$("div#jqsm-warning").show(),$("button#jqsm-stay-logged-in").on("click",function(a){c.extendsess(a)}).on("click",function(){b.hide()}),$("button#jqsm-log-out").on("click",c.logout)},onbeforetimeout:function(){},ontimeout:function(){window.location.href=c.timeoutUrl}},c={},g=0;return $.extend(c,b,a,{extendsess:h}),$(document).on(c.activityEvents,h),h(),c};
+    var sessionMonitor=function(a){"use strict";function b(a){a&&a.stopPropagation();var b=new Date,d=b-i;a&&a.target&&"stay-logged-in"==a.target.id?(c(),h.ping()):d>h.minPingInterval&&(i=b,c(),h.ping())}function c(){var a=h.sessionLifetime-h.timeBeforeWarning;window.clearTimeout(e),window.clearTimeout(f),e=window.setTimeout(h.onwarning,a),f=window.setTimeout(d,h.sessionLifetime)}function d(){$.when(h.onbeforetimeout()).always(h.ontimeout)}var e,f,g={sessionLifetime:36e5,timeBeforeWarning:6e5,minPingInterval:6e4,activityEvents:"mouseup",pingUrl:window.location.protocol+"//"+window.location.host+"/api/ping",logoutUrl:"/logout",timeoutUrl:"/logout?timeout=1",ping:function(){$.ajax({type:"GET",contentType:"text/plain",url:h.pingUrl,crossDomain:!0})},logout:function(){window.location.href=h.logoutUrl},onwarning:function(){var a=Math.round(h.timeBeforeWarning/60/1e3),b=$('<div id="jqsm-warning">Your session will expire in '+a+' minutes. <button id="jqsm-stay-logged-in">Stay Logged In</button><button id="jqsm-log-out">Log Out</button></div>');$("body").children("div#jqsm-warning").length||$("body").prepend(b),$("div#jqsm-warning").show(),$("button#jqsm-stay-logged-in").on("click",function(a){h.extendsess(a)}).on("click",function(){b.hide()}),$("button#jqsm-log-out").on("click",h.logout)},onbeforetimeout:function(){},ontimeout:function(){window.location.href=h.timeoutUrl}},h={},i=0;return $.extend(h,g,a,{extendsess:b}),$(document).on(h.activityEvents,b),b(),h};
 
     var truenth_authenticated = {% if user %} true;{% else %} false;{% endif %}
     // Set default sessionLifetime from Flask config
@@ -25,14 +25,18 @@
       // Once nav is loaded, make the wrapper visible
       setTimeout('$("#tnthNavWrapper").css("visibility","visible");', 0);
       // Configure and start the session timeout monitor
+      //window.location.protocol+"//"+window.location.host+
+      var _protocol = window.location.protocol;
+      var _host = window.location.host;
+
       var sessMon = sessionMonitor({
             sessionLifetime: DEFAULT_SESSION_LIFETIME,
             timeBeforeWarning: 1 * 60 * 1000,
             minPingInterval: 1 * 60 * 1000,  // 1 minute
             activityEvents: "mouseup",
-            pingUrl: '{{PORTAL}}/api/ping',
-            logoutUrl: '{{PORTAL}}/logout',
-            timeoutUrl: '{{PORTAL}}/logout?timed_out=1',
+            pingUrl: _protocol+'//' + _host + '/api/ping',
+            logoutUrl: _protocol+'//' + _host + '/logout',
+            timeoutUrl: _protocol+'//' + _host + '/logout?timed_out=1',
             onwarning: function() {$("#session-warning-modal").modal("show");}
       });
       window.sessMon = sessMon;
