--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -77,6 +77,9 @@
                 {% if enable_links %}<a href="{{PORTAL}}">{% endif %}
                     <img class="tnth-topnav-wordmark" src="{{PORTAL}}{{ url_for('static', filename='img/logo_wordmark_topnav2.png') }}" />
                 {% if enable_links %}</a>{% endif %}
+                {% if branded_logo %}
+                    <img src={{ branded_logo }}></img>
+                {% endif %}
             </div>
             <div id="tnthTopLinks">
                 <div class="tnth-btn-group">
@@ -129,6 +132,9 @@
                 {% endif %}
                 <img src="{{PORTAL}}{{url_for('static',filename='img/logo_wordmark_topnav.png')}}" />
                 {% if enable_links %}</a>{% endif %}
+                {% if branded_logo %}
+                    <img src={{ branded_logo }}></img>
+                {% endif %}
             </div>
             {% if enable_links %}
             <div id="tnthNavbarXs">
